workout/static/workout.css
/*///////////*/
/* CSS RESET */
/*///////////*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
    margin: 0;
    padding: 0;
    border: 0;
    font-size: 100%;
    font: inherit;
    vertical-align: baseline;
}
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
    display: block;
}
body {
    line-height: 1;
}
ol, ul, a {
    list-style: none;
    color: white;
}
blockquote, q {
    quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
    content: '';
    content: none;
}
table {
    border-collapse: collapse;
    border-spacing: 0;
}
a {
    text-decoration: none;
}

/*///////////////*/
/* END CSS RESET */
/*///////////////*/

body {
    font-family: 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode', sans-serif;
    background: #014cde;
    background: -moz-linear-gradient(top,  #014cde 0%, #12a0e4 100%);
    background: -webkit-linear-gradient(top,  #014cde 0%,#12a0e4 100%);
    background: linear-gradient(to bottom,  #014cde 0%,#12a0e4 100%);
    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#014cde', 
        endColorstr='#12a0e4',GradientType=0 );
    height: 100%;
    margin: 0;
    background-repeat: no-repeat;
    background-attachment: fixed;
}

#header {
    width: 250%;
    overflow:hidden;
    padding: 1%;
    color: white;
    font-size: 3em;
}

#logo {
    float:left;
}


#header-back {
}

.header-date {
    float:right;
    margin-left: 1%;
   /* margin: 0 auto 0 11000px; */
}

#container{
    position: absolute;
    padding-top: 30%;
    margin: auto;
    top:0;
    bottom:0;
    left:0;
    right:0;
    width:50%;
    height:100%;
    overflow:hidden;
    z-index: -5;
}


.date-circle, .date-circle-active {
    position:relative;
    float:left;
    margin: -1000px 2% 2% 2%;
    max-width: 600px;
    min-width: 100px;
    width: 300px;
    height: 300px;
    border: 3px solid white;
    border-radius: 50%;
    background-color:rgba(0, 0, 0, 0.1);
    color: white;
    text-align: center;
    vertical-align: middle;
    line-height: 300px;
}

.date-circle-date{
    width:100%;
    height: 100%;
    top:0;
    position:absolute;
    left:0;
    line-height: 250%;
}

.date-circle-workouts {
    display:none;
}

.date-circle-workouts-text {
    position: absolute;
    top: 25%;
    width: 100%;
    font-size:50%;
    line-height: 110%;
    z-index: 5;
}

.date-circle-workouts-bg{
    position: absolute;
    top: 0;
    width: 98%;
    height: 98%;
    background-color:rgba(0, 0, 0, 0.9);
    border: 1px solid black;
    border-radius: 50%;
    left:0;
    right:0;
    margin:auto; 
}





#sidebar {
    float:left;
    margin-left:0.5%;
}

#sidebar li {
    margin-top:20%;
}

.sidebar-month{
    margin-left:50%;
}

#content {
}

#workout-table-border, #workout-chart {
    width:60%;
    margin:auto;
    border:1px solid #d8d8d8;
    padding:3%;
    background:white;
}

.workout-edit, .submit-edit,
.workout-delete {
    border:1px solid black;
    border-radius:2px;
    padding: 3px;
    background-color: transparent;
}

.cancel-edit {
    text-align: center;
    margin-top: 15%;
    background-color: transparent;
}

.workout-row, .workout-form-row {
    border-bottom: 1px solid #d8d8d8;
    
}

.workout-form-row td{
    vertical-align: middle;
    padding: 3% 0 3% 0;
}

.workout-row td, #workout-table-header-row td{
    vertical-align: middle;
    padding: 1%;
}

